Refactor styles and components for improved consistency and responsiveness
- Updated global CSS styles with new design tokens and improved layout for mobile responsiveness.
- Added new classes for card, avatar, and profile sections to enhance visual hierarchy.
- Refined animations and transitions for smoother user experience.
- Standardized comment style in Astro components for better readability.
- Adjusted titles and descriptions in various components for consistency.

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# Grimoire — Environment Variables
+# Grimoire - Environment Variables
 # Copy to .env and fill in your values
 
 # Pangolin / Newt tunnel credentials
