--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,4 @@
-# Subdomain routing — maps Host header to site folder
+# Subdomain routing - maps Host header to site folder
 map $host $site_folder {
     ~^(?<subdomain>.+)\.kylehub\.dev$  $subdomain;
     default                             "kyle";
