--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       # Mount built sites into NGINX html directory
       # Add new sites here: ./sites/<name>/dist:/usr/share/nginx/html/<name>
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./sites/sircookie/dist:/usr/share/nginx/html/sircookie:ro
+      - ./sites/yunasoul/dist:/usr/share/nginx/html/yunasoul:ro
     networks:
       - pangolin_net
 
