--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,10 @@ services:
     volumes:
       # Mount built sites into NGINX html directory
       # Add new sites here: ./sites/<name>/dist:/usr/share/nginx/html/<name>
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./sites/sircookie/dist:/usr/share/nginx/html/sircookie:ro
-      - ./sites/yunasoul/dist:/usr/share/nginx/html/yunasoul:ro
+      # :z flag relabels volumes for SELinux (compatible with Docker + Podman)
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro,z
+      - ./sites/sircookie/dist:/usr/share/nginx/html/sircookie:ro,z
+      - ./sites/yunasoul/dist:/usr/share/nginx/html/yunasoul:ro,z
     networks:
       - pangolin_net
 
@@ -22,7 +23,10 @@ services:
       - PANGOLIN_ENDPOINT=${PANGOLIN_ENDPOINT}
       - NEWT_ID=${NEWT_ID}
       - NEWT_SECRET=${NEWT_SECRET}
-    network_mode: service:router
+    networks:
+      - pangolin_net
+    depends_on:
+      - router
 
 networks:
   pangolin_net:
