feat: Implement builder service for automated site rebuilding and deployment

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,8 @@
 PANGOLIN_ENDPOINT=https://pangolin.kylehub.dev
 NEWT_ID=your-newt-id-here
 NEWT_SECRET=your-newt-secret-here
+
+# Builder settings (all optional - defaults shown)
+BUILD_INTERVAL=7200
+GIT_BRANCH=main
+BUILD_ON_START=true
