--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     container_name: grimoire_builder
     restart: unless-stopped
     volumes:
-      - .:/app:z
+      - .:/app
     environment:
       - BUILD_INTERVAL=${BUILD_INTERVAL:-7200}
       - GIT_BRANCH=${GIT_BRANCH:-main}
@@ -21,10 +21,9 @@ services:
     volumes:
       # Mount built sites into NGINX html directory
       # Add new sites here: ./sites/<name>/dist:/usr/share/nginx/html/<name>
-      # :z flag relabels volumes for SELinux (compatible with Docker + Podman)
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro,z
-      - ./sites/sircookie/dist:/usr/share/nginx/html/sircookie:ro,z
-      - ./sites/yunasoul/dist:/usr/share/nginx/html/yunasoul:ro,z
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./sites/sircookie/dist:/usr/share/nginx/html/sircookie:ro
+      - ./sites/yunasoul/dist:/usr/share/nginx/html/yunasoul:ro
     networks:
       - pangolin_net
     depends_on:
@@ -36,6 +35,9 @@ services:
     image: fosrl/newt:latest
     container_name: grimoire_newt
     restart: unless-stopped
+    cap_add:
+      - NET_ADMIN
+      - SYS_MODULE
     environment:
       - PANGOLIN_ENDPOINT=${PANGOLIN_ENDPOINT}
       - NEWT_ID=${NEWT_ID}
