fix: Add NET_ADMIN capability to newt service for enhanced network management

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,8 @@ services:
     image: fosrl/newt:latest
     container_name: grimoire_newt
     restart: unless-stopped
+    cap_add:
+      - NET_ADMIN
     environment:
       - PANGOLIN_ENDPOINT=${PANGOLIN_ENDPOINT}
       - NEWT_ID=${NEWT_ID}
