--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   builder:
     build:
       context: .
-      dockerfile: Dockerfile.builder
+      dockerfile: Containerfile.builder
     container_name: grimoire_builder
     restart: unless-stopped
     volumes:
@@ -35,8 +35,6 @@ services:
     image: fosrl/newt:latest
     container_name: grimoire_newt
     restart: unless-stopped
-    cap_add:
-      - NET_ADMIN
     environment:
       - PANGOLIN_ENDPOINT=${PANGOLIN_ENDPOINT}
       - NEWT_ID=${NEWT_ID}
