fix(License): fixed the copyright notice for template dir and updated the package.json to the name the LICENSE file

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "description": "A Static Site Factory for creating beautiful, bespoke websites",
-  "license": "AGPL-3.0-or-later",
+  "license": "SEE LICENSE IN LICENSE.md",
   "author": "KyleDerZweite",
   "scripts": {
     "build": "pnpm -r --filter './sites/**' run build",
