feat: Add kyle-portfolio site to Nginx service configuration.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
       - ./sites/sircookie/dist:/usr/share/nginx/html/sircookie:ro
       - ./sites/yunasoul/dist:/usr/share/nginx/html/yunasoul:ro
+      - ./sites/kyle-portfolio/dist:/usr/share/nginx/html/portfolio:ro
     networks:
       - pangolin_net
     depends_on:
